[gd_scene load_steps=9 format=3 uid="uid://cm7boqwqtyv1b"]

[ext_resource type="Script" path="res://options_screen/options_screen.gd" id="1_3tutc"]
[ext_resource type="Texture2D" uid="uid://b54p3hjeuc50" path="res://assets/ui/UIbg.png" id="1_a017n"]
[ext_resource type="LabelSettings" uid="uid://cbn5nst5rnt21" path="res://assets/GM_84_Green.tres" id="2_5q7ok"]
[ext_resource type="LabelSettings" uid="uid://cex2a7ivhcf7v" path="res://assets/GM_32_Dark.tres" id="3_yyl1c"]
[ext_resource type="Texture2D" uid="uid://cxht45nlunmyf" path="res://assets/ui/blue_button00.png" id="5_jwc4h"]
[ext_resource type="Texture2D" uid="uid://8dw4cvxq057f" path="res://assets/ui/yellow_button00.png" id="6_fh8qq"]
[ext_resource type="Texture2D" uid="uid://qgn6i6libyt5" path="res://assets/ui/green_button00.png" id="7_jat0d"]
[ext_resource type="LabelSettings" path="res://assets/GM_32_White.tres" id="8_c8xyu"]

[node name="OptionsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3tutc")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_a017n")
patch_margin_left = 24
patch_margin_top = 24
patch_margin_right = 24
patch_margin_bottom = 24

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "OPTIONS"
label_settings = ExtResource("2_5q7ok")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer5" type="Control" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2
text = "VOLUME"
label_settings = ExtResource("3_yyl1c")
horizontal_alignment = 2
vertical_alignment = 1

[node name="MusicVolume" type="HSlider" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 1.0
step = 0.1
value = 0.5

[node name="Spacer6" type="Control" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CloseButton" type="TextureButton" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
texture_normal = ExtResource("5_jwc4h")
texture_pressed = ExtResource("6_fh8qq")
texture_hover = ExtResource("7_jat0d")

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/CloseButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.0
offset_top = -19.5
offset_right = 38.0
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
text = "CLOSE"
label_settings = ExtResource("8_c8xyu")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="value_changed" from="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/MusicVolume" to="." method="_on_music_volume_value_changed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
